# mre-issue-higher-ranked

./: .env  Cargo.toml  README.md
migrations/2024-02-26-211524_create_posts/: up.sql
src/: db.rs  main.rs  models.rs  pages.rs  schema.rs
